# cpg

./: .gitignore  .gitmodules  CPGvalidator_docs.ipynb  README.md  env.yml  flake.nix
.github/workflows/: build_cpgparser.yml
complex/: README.md  pyproject.toml
complex/src/complex/: aws_wrapper.py  cli.py  s3tools.py  utils.py
cpgdata/: README.md  pyproject.toml
cpgdata/notes/: rules_authoring.py
cpgdata/src/cpgdata/: __init__.py  cli.py  key_parser.lark  measurement.py  parser.py  pipe.py  rule.py  utils.py
cpgdata/src/cpgdata/cli/: index.py  inventory.py  main.py  report.py
cpgparser/: Cargo.toml  pyproject.toml
cpgparser/src/: key_parser.pest  lib.rs
cpgweb/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
cpgweb/components/: announcement.tsx  duck-shell.tsx  widgets-nav.tsx
cpgweb/components/duck-shell/: duckApp.tsx  shell.tsx
cpgweb/components/ui/search/: pagination.tsx  search.tsx
cpgweb/docs/: architecture.md  overview.md
cpgweb/lib/: add_duckdb_worker.js  cpg_ops.ts
cpgweb/src/app/: layout.tsx  page.tsx
cpgweb/src/app/download/: page.tsx
cpgweb/src/app/duckdb/: duckApp.tsx  page.tsx  shell.tsx
cpgweb/src/app/duckshell/: page.tsx
cpgweb/src/app/explore/: page.tsx
cpgweb/src/app/home/: layout.tsx  page.tsx
cpgweb/src/app/home/download/: page.tsx
cpgweb/src/app/home/duckshell/: page.tsx
cpgweb/src/app/home/explore/: page.tsx
cpgweb/src/app/home/search/: page.tsx  services.ts
cpgweb/src/app/search/: columns.tsx  download-facet.tsx  download.tsx  facet-table-row.tsx  file-viewer.tsx  page.tsx  pagination.tsx  project-table.tsx  services.ts  types.ts  view.tsx
cpgweb/src/components/: announcement.tsx  page-header.tsx  theme-toggle.tsx  widgets-nav.tsx
cpgweb/src/components/duck-shell/: duckApp.tsx  shell.tsx
cpgweb/src/components/ui/: dialog.tsx
cpgweb/src/components/ui/search/: pagination.tsx  result-list.tsx  search.tsx  utils.ts
cpgweb/src/lib/: addDocumentsToAlgolia.js  cpg_ops.ts  createAlgoliaSearchClient.ts
cpgweb/src/styles/: globals.css
docs/: architecture.md  overview.md  rule.md
