[tool.poetry]
name = "complex"
version = "0.1.0"
description = "Infra as code helper"
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "complex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
