[tool.poetry]
name = "complex"
version = "0.1.0"
description = "Infra as code helper"
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "complex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
pydantic = "^2.4"
pulumi = "^3.89"
pulumi-aws = "^6.6"
boto3 = "^1.28"
awscli = { git = "https://github.com/aws/aws-cli.git@014d436d8728f202afaa88555e80a89a4b14bffd" }


[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.10"
ruff = "^0.1"
build = "^1.0"
twine = "^4.0"


[tool.poetry.scripts]
complex = "complex.cli:main"
aws = "complex.cli:awscli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]
