[tool.poetry]
name = "cpgdata"
version = "0.1.0"
description = "Cell painting gallery data handling and validation"
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "cpgdata", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
