[tool.poetry]
name = "cpgdata"
version = "0.1.0"
description = "Cell painting gallery data handling and validation"
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "cpgdata", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
pydantic = "^2.4"
polars = "^0.19"
pyarrow = "^13.0"
joblib = "^1.3.2"
cpgparser = "^0.1"
cpgaws = "^2.15"


[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.10"
ruff = "^0.1"
build = "^1.0"
twine = "^4.0"


[tool.poetry.scripts]
cpg = "cpgdata.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]
