[package]
name = "cpgparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpgparser"
crate-type = ["cdylib"]

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
pyo3 = "0.19.0"

[profile.release]
opt-level = 3
lto = "thin"
